# projeto-ml

./: app.py  hectare_terreno.csv  preco_imovel.csv  pyproject.toml  testes.ipynb
