[project]
name = "projeto-ml"
version = "0.1.0"
description = ""
authors = [
    {name = "deyvid102",email = "62156167+deyvid102@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "streamlit (>=1.51.0,<2.0.0)"
]

[tool.poetry]
packages = [{include = "projeto_ml", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
